--- a/cssIndex/style.css
+++ b/cssIndex/style.css
@@ -54,6 +54,7 @@ a:hover {
   display: flex;
   font-size: 4rem;
   justify-content: space-evenly;
+  margin-top: 1px;
 }
 
 /* parrafo about me */
@@ -65,7 +66,11 @@ p {
   line-height: 1.3rem;
 }
 
-
+/* Card of the skills */
+.center {
+  display: flex;
+  justify-content: center;
+}
 
 /* Formulario */
 form {
