--- a/cssIndex/style.css
+++ b/cssIndex/style.css
@@ -64,6 +64,12 @@ body{
 .content {
   display: flex;
 }
+.center {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding-top: 4px;
+}
 /* Superior Part */
 h1,h2 {
   display: flex;
@@ -76,7 +82,13 @@ h2 {
 }
 .hero img {
   width: 100%;
-  height: 30rem;  
+  height: 17rem;  
+}
+@media (min-width: 728px) {
+  .hero img {
+    width: 100%;
+    height: 30rem; 
+  }
 }
 a:hover {
   color: #833ab4;
@@ -153,11 +165,6 @@ p {
   margin-left: 25%;
   width: 43%;
   }
-}
-.center {
-  display: flex;
-  justify-content: center;
-  text-align: center;
 }
 
 /* Why I do like Programming */
